# REED

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  cli_setup.py  pyproject.toml  settings.yaml  settings.yaml.example
backend/app/: __init__.py  config.py  main.py  scheduler.py
backend/app/agents/: __init__.py  runner.py  tools.py
backend/app/api/: __init__.py  deps.py  digests.py  health.py  sessions.py  snapshot.py  trigger.py
backend/app/digests/: __init__.py  dataset_mirror.py  generator.py  models.py  store.py
backend/app/market_data/: __init__.py  base.py  factory.py  stooq.py
backend/app/news/: __init__.py  brave.py  ddgs.py  factory.py  firecrawl.py  pipeline.py  search.py  tavily.py  tiered.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  openrouter_provider.py  scrape.py  tools.py
backend/app/sessions/: __init__.py  close.py  early_market.py  midday.py  pre_market.py  registry.py  weekend_recap.py
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css
dashboard/src/components/: DigestList.tsx  DigestReader.tsx  MarketSnapshotStrip.tsx  SentimentGauge.tsx  SourceFooter.tsx  StoryCard.tsx  TickerChip.tsx
dashboard/src/hooks/: useDigestList.ts  useSnapshot.ts
dashboard/src/lib/: api.ts  dataset.ts  example-digest.json  sentiment.ts  types.ts
docs/: ARCHITECTURE.md  AUDIT_2026-07-23.md  HF_DEPLOYMENT.md
scripts/: deploy_vps.sh
