[project]
name = "reed"
version = "0.1.0"
description = "Real-time Equity and Economic Digest: a scheduled agent runtime."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "ddgs>=9.0,<10",            # renamed from duckduckgo-search (current 9.x line)
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "openai>=1.55",             # covers OpenAI + OpenRouter + OpenAI-compatible
    "anthropic>=0.39",
]
